# substrate_demo

./: Cargo.toml  README.md  aura-raw.json  aura.json  babe-raw.json  babe.json  raw.json
ev/chains/local_testnet/db/full/: IDENTITY  LOG  OPTIONS-000035  OPTIONS-000037
ev/chains/local_testnet/network/: secret_ed25519
frontendTS/: index.html  index2.html  main.js  main.ts  package.json  tsconfig.json
frontendTS/bak_node_modules/: .yarn-integrity
frontendTS/outputs/: main.js  main.js.map
frontendTS/outputs/bak_node_modules/@ethereumjs/common/src/: index.js  index.js.map  types.js.map
frontendTS/outputs/bak_node_modules/@ethereumjs/tx/src/: baseTransaction.js  baseTransaction.js.map  eip1559Transaction.js  eip1559Transaction.js.map  eip2930Transaction.js  eip2930Transaction.js.map  index.js.map  legacyTransaction.js  legacyTransaction.js.map  transactionFactory.js.map  types.js.map  util.js.map
frontendTS/outputs/bak_node_modules/@ethersproject/abi/src.ts/: _version.js.map  abi-coder.js  abi-coder.js.map  fragments.js  fragments.js.map  index.js  (+3 more)
frontendTS/outputs/bak_node_modules/ethereum-cryptography/src/: aes.js  aes.js.map  blake2b.js  blake2b.js.map  hash-utils.js  hash-utils.js.map  hdkey.js  hdkey.js.map  index.js  index.js.map  keccak.js  keccak.js.map  pbkdf2.js  pbkdf2.js.map  random.js  random.js.map  ripemd160.js  ripemd160.js.map  scrypt.js  scrypt.js.map  secp256k1.js  secp256k1.js.map  sha256.js  sha256.js.map
frontendTS/outputs/bak_node_modules/ethereumjs-util/src/: account.js  account.js.map  address.js.map  bytes.js.map  constants.js.map  externals.js.map  hash.js.map  helpers.js.map  index.js.map  internal.js.map  object.js.map  signature.js.map  types.js.map
frontendTS/outputs/bak_node_modules/rlp/src/: index.js.map  types.js.map
frontendTS/outputs/bak_node_modules/rxjs/src/: index.js.map
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/extend-pallet/: Cargo.toml
pallets/extend-pallet/src/: lib.rs
pallets/kitties/: Cargo.toml
pallets/kitties/src/: lib.rs  mock.rs  tests.rs
pallets/kitties/src/migrations/: v1.rs  v2.rs
pallets/log-test/: Cargo.toml
pallets/log-test/src/: lib.rs
pallets/oci/: Cargo.toml  README.md
pallets/oci/src/: README.md  lib.rs  mock.rs  tests.rs
pallets/ocw-test/: Cargo.toml
pallets/ocw-test/src/: lib.rs  mock.rs
pallets/poe/: Cargo.toml
pallets/poe/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/signed-payload-demo/: Cargo.toml
pallets/signed-payload-demo/src/: lib.rs
pallets/storage-provider/: Cargo.toml
pallets/storage-provider/src/: lib.rs  traits.rs
pallets/template/src/: expanded_code.rs  lib.rs  mock.rs  tests.rs
pallets/use-other-pallet/: Cargo.toml
pallets/use-other-pallet/src/: lib.rs
primitives/: Cargo.toml
primitives/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
(+561 files in other folders)
